OOP is here. Animation isn't working (check it!).

--- a/course_proj_cga/course_proj_cga.vcxproj.filters
+++ b/course_proj_cga/course_proj_cga.vcxproj.filters
@@ -24,8 +24,14 @@
     <ClInclude Include="targetver.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="KinematicPair.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
     <ClInclude Include="commons.h">
-      <Filter>Файлы исходного кода</Filter>
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="Light.h">
+      <Filter>Заголовочные файлы</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -35,10 +41,10 @@
     <ClCompile Include="cga002.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="kinematic_core.cpp">
+    <ClCompile Include="KinematicPair.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="graphic_core.cpp">
+    <ClCompile Include="Light.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
   </ItemGroup>
