--- a/course_proj_cga/course_proj_cga.vcxproj
+++ b/course_proj_cga/course_proj_cga.vcxproj
@@ -81,13 +81,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="commons.h" />
+    <ClInclude Include="KinematicPair.h" />
+    <ClInclude Include="Light.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cga002.cpp" />
-    <ClCompile Include="graphic_core.cpp" />
-    <ClCompile Include="kinematic_core.cpp" />
+    <ClCompile Include="KinematicPair.cpp" />
+    <ClCompile Include="Light.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
