--- a/course_proj_cga/course_proj_cga.vcxproj
+++ b/course_proj_cga/course_proj_cga.vcxproj
@@ -80,24 +80,24 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="callbacks.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="commons.h" />
     <ClInclude Include="KinematicPair.h" />
     <ClInclude Include="KPairArray.h" />
     <ClInclude Include="Light.h" />
     <ClInclude Include="Link.h" />
-    <ClInclude Include="LinkArray.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="callbacks.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="cga002.cpp" />
     <ClCompile Include="KinematicPair.cpp" />
     <ClCompile Include="KPairArray.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="Link.cpp" />
-    <ClCompile Include="LinkArray.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
