--- a/course_proj_cga/course_proj_cga.vcxproj
+++ b/course_proj_cga/course_proj_cga.vcxproj
@@ -87,6 +87,7 @@
     <ClInclude Include="KPairArray.h" />
     <ClInclude Include="Light.h" />
     <ClInclude Include="Link.h" />
+    <ClInclude Include="Polygon.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -98,6 +99,7 @@
     <ClCompile Include="KPairArray.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="Link.cpp" />
+    <ClCompile Include="Polygon.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
